# xmlconfig

./: CMakeLists.txt  main  main.cpp  vcpkg.json
include/: network_tools.h  network_ui.h  profiles.h  shortcuts.h  tray.h  xml_parser.h
src/: main.cpp  network_tools.cpp  network_ui.cpp  profiles.cpp  shortcuts.cpp  tray_win.cpp  xml_parser.cpp
